--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <center>
-            <img src="img/TBG logo.png" alt="logo da empresa The Begues News" width="100">
+            <img src="TBG logo.png" alt="logo da empresa The Begues News" width="100">
             <button>Login</button><BR></BR>
             Pesquisar: <input type="text">
         </center>
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <a href="#"><img src="img/TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
+        <a href="#"><img src="TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
         <ul>
             <a href=""><li>Anuncie com a gente</li></a>
             <a href=""><li>Reportar erro</li></a>
