--- a/noticia1.html
+++ b/noticia1.html
@@ -13,7 +13,7 @@
     <header>
         <div>
             <center>
-                <a href="index.html"><img src="img/TBG logo.png" alt="logo da empresa The Begues News" width="100"></a>
+                <a href="index.html"><img src="TBG logo.png" alt="logo da empresa The Begues News" width="100"></a>
                 <button>Login</button><BR></BR>
                 Pesquisar: <input type="text">
             </center>
@@ -82,7 +82,7 @@
     </main>
 
     <footer>
-        <a href="index.html"><img src="img/TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
+        <a href="index.html"><img src="TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
         <ul>
             <a href=""><li>Anuncie com a gente</li></a>
             <a href=""><li>Reportar erro</li></a>
