--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <center>
-            <img src="TBG logo.png" alt="logo da empresa The Begues News" width="100">
+            <a href="#"><img src="TBG logo.png" alt="logo da empresa The Begues News" width="100"></a>
             <button>Login</button><BR></BR>
             Pesquisar: <input type="text">
         </center>
