--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,103 +8,119 @@
     <meta name="author" content="Arthur Amaral">
     <meta name="description" content="Site de notícias teste">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700|Roboto+Slab:400,700|Titillium+Web:400,600,700"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>TBGNews</title>
 </head>
+
 <body>
     <header>
-        <center>
-            <a href="#"><img src="TBG logo.png" alt="logo da empresa The Begues News" width="100"></a>
-            <button>Login</button><BR></BR>
-            Pesquisar: <input type="text">
-        </center>
-        <nav><ul>
-            <a href="#"><li>Início</li></a>
-            <a href="#"><li>Economia</li></a>
-            <a href="#"><li>Política</li></a>
-            <a href="#"><li>Ciências</li></a>
-            <a href="#"><li>TEC</li></a>
-            <a href="#"><li>Educação</li></a>
-        </ul></nav>
+        <div class="login-camp">
+            <div class="login-but">
+                Login
+            </div>
+        </div>
+        <div class="logo-header">
+            <a href="index.html"><img src="img/TBG logo.png" alt="Logo da empresa The Begues News" width="100"></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Economia</a></li>
+                <li><a href="#">Política</a></li>
+                <li><a href="#">Ciências</li></a></li>
+                <li><a href="#">TEC</a></li>
+                <li><a href="#">Educação</a></li>
+            </ul>
+        </nav>
+        <div class="search-camp">
+            Search: <input type="text">
+            <button class="search-but"><img class="search-but-img" src="img/search-but.png" alt="ok"></button>
+        </div>
     </header>
 
     <main>
-        <center>
-            <a href="#"><img src="http://www.shakeout.org/2008/downloads/ShakeOut_BannerAds_GetReady_728x90_v3.gif" alt="Propraganda"></a><br><br>
-            <table>
-                <tr>
-                    <th>
-                        <center>
-                            <a href="noticia1.html"><img src="http://lorempixel.com/275/130/sports/3" alt=""></a><br>
-                            <h3>Notícia 1</h3><br>
-                            <p>Está é a noticia demonstrativa para avaliação.</p>
-                        </center>
-                    </th>
-                    <th>
-                        <center>
-                            <a href=""><img src="http://lorempixel.com/275/130/sports/6" alt=""></a><br>
-                            <h3>Notícia 2</h3><br>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus, amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias sunt. Labore doloribus aperiam tempora et!</p>
-                        </center>
-                    </th>
-                    <th>
-                        <center>
-                            <a href="#"><img src="http://lorempixel.com/275/130/sports/8" alt=""></a><br>
-                            <h3>Notícia 3</h3><br>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus, amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias sunt. Labore doloribus aperiam tempora et!</p>
-                        </center>
-                    </th>
-                    <th>
-                        <center>
-                            <a href="#"><img src="http://lorempixel.com/275/130/sports/10" alt=""></a><br>
-                            <h3>Notícia 4</h3><br>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus, amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias sunt. Labore doloribus aperiam tempora et!</p>
-                        </center>
-                    </th>                    
-                </tr>
-                <tr>
-                    <th>
-                        <center>
-                            <a href=""><img src="http://lorempixel.com/275/130/food/1" alt=""></a><br>
-                            <h3>Notícia 5</h3><br>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus, amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias sunt. Labore doloribus aperiam tempora et!</p>
-                        </center>
-                    </th>
-                    <th>
-                        <center>
-                            <a href=""><img src="http://lorempixel.com/275/130/animals/1" alt=""></a><br>
-                            <h3>Notícia 6</h3><br>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus, amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias sunt. Labore doloribus aperiam tempora et!</p>
-                        </center>
-                    </th>
-                    <th>
-                        <center>
-                            <a href="#"><img src="http://lorempixel.com/275/130/nature/2" alt=""></a><br>
-                            <h3>Notícia 7</h3><br>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus, amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias sunt. Labore doloribus aperiam tempora et!</p>
-                        </center>
-                    </th>
-                    <th>
-                        <center>
-                            <a href="#"><img src="http://lorempixel.com/275/130/" alt=""></a><br>
-                            <h3>Notícia 8</h3><br>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus, amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias sunt. Labore doloribus aperiam tempora et!</p>
-                        </center>
-                    </th>
-                </tr>
-            </table><br><br>
-            <a href="#"><img src="http://www.shakeout.org/2008/downloads/ShakeOut_BannerAds_GetReady_728x90_v3.gif" alt="Propraganda"></a>
-        </center>
+        <a href="#"><img src="http://www.shakeout.org/2008/downloads/ShakeOut_BannerAds_GetReady_728x90_v3.gif"
+                alt="Propraganda"></a><br><br>
+        <div class="news">
+            <a href="noticia1.html"><img src="http://lorempixel.com/275/130/sports/3" alt=""></a><br>
+            <h3>Notícia 1</h3><br>
+            <p>Está é a noticia demonstrativa para avaliação.</p>
+        </div class="news">
+        <div class="news">
+            <a href=""><img src="http://lorempixel.com/275/130/sports/6" alt=""></a><br>
+            <h3>Notícia 2</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus,
+                amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias
+                sunt. Labore doloribus aperiam tempora et!</p>
+        </div class="news">
+        <div class="news">
+            <a href="#"><img src="http://lorempixel.com/275/130/sports/8" alt=""></a><br>
+            <h3>Notícia 3</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus,
+                amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias
+                sunt. Labore doloribus aperiam tempora et!</p>
+        </div class="news">
+        <div class="news">
+            <a href="#"><img src="http://lorempixel.com/275/130/sports/10" alt=""></a><br>
+            <h3>Notícia 4</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus,
+                amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias
+                sunt. Labore doloribus aperiam tempora et!</p>
+        </div class="news">
+        <div class="news">
+            <a href=""><img src="http://lorempixel.com/275/130/food/1" alt=""></a><br>
+            <h3>Notícia 5</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus,
+                amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias
+                sunt. Labore doloribus aperiam tempora et!</p>
+        </div class="news">
+        <div class="news">
+            <a href=""><img src="http://lorempixel.com/275/130/animals/1" alt=""></a><br>
+            <h3>Notícia 6</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus,
+                amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias
+                sunt. Labore doloribus aperiam tempora et!</p>
+        </div class="news">
+        <div class="news">
+            <a href="#"><img src="http://lorempixel.com/275/130/nature/2" alt=""></a><br>
+            <h3>Notícia 7</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus,
+                amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias
+                sunt. Labore doloribus aperiam tempora et!</p>
+        </div class="news">
+        <div class="news">
+            <a href="#"><img src="http://lorempixel.com/275/130/" alt=""></a><br>
+            <h3>Notícia 8</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum voluptas doloribus,
+                amet sequi veniam animi dolores est magnam odit necessitatibus, nam voluptates, alias
+                sunt. Labore doloribus aperiam tempora et!</p>
+        </div class="news">
+        <a href="#"><img src="http://www.shakeout.org/2008/downloads/ShakeOut_BannerAds_GetReady_728x90_v3.gif"
+                alt="Propraganda"></a>
     </main>
 
     <footer>
-        <a href="#"><img src="TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
+        <a href="#"><img src="img/TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
         <ul>
-            <a href=""><li>Anuncie com a gente</li></a>
-            <a href=""><li>Reportar erro</li></a>
-            <a href=""><li>Denunciar</li></a>
-            <a href=""><li>Políticas de privacidade</li></a>
+            <a href="">
+                <li>Anuncie com a gente</li>
+            </a>
+            <a href="">
+                <li>Reportar erro</li>
+            </a>
+            <a href="">
+                <li>Denunciar</li>
+            </a>
+            <a href="">
+                <li>Políticas de privacidade</li>
+            </a>
         </ul>
         Copyright
     </footer>
 </body>
+
 </html>
