--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700|Roboto+Slab:400,700|Titillium+Web:400,600,700"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
     <title>TBGNews</title>
 </head>
 
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="logo-header">
-            <a href="index.html"><img src="img/TBG logo.png" alt="Logo da empresa The Begues News" width="100"></a>
+            <a href="index.html"><img src="TBG logo.png" alt="Logo da empresa The Begues News" width="100"></a>
         </div>
         <nav>
             <ul>
@@ -38,7 +38,7 @@
         </nav>
         <div class="search-camp">
             Search: <input type="text">
-            <button class="search-but"><img class="search-but-img" src="img/search-but.png" alt="ok"></button>
+            <button class="search-but"><img class="search-but-img" src="search-but.png" alt="ok"></button>
         </div>
     </header>
 
@@ -104,7 +104,7 @@
     </main>
 
     <footer>
-        <a href="#"><img src="img/TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
+        <a href="#"><img src="TBG logo.png" width="100" alt="Logo da empresa The Begues News"></a>
         <ul>
             <a href="">
                 <li>Anuncie com a gente</li>
